fix(link): disable tap highlights on iOS (#1651)

--- a/packages/varlet-ui/src/link/link.less
+++ b/packages/varlet-ui/src/link/link.less
@@ -21,6 +21,7 @@
   text-decoration: none;
   font-size: var(--link-font-size);
   transition: opacity 0.15s;
+  -webkit-tap-highlight-color: transparent;
 
   &--underline-always {
     text-decoration: underline;
